# e2e_ontology

./: .gitignore  .linkmllint.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  agent_system_design.md  core.yaml  demo_narrative.md  editor.py  exploder.py  initial_design_draft.md  ontology_primer.md  plan_of_attack.md  pyproject.toml  scont_bodies.py  scont_meta.yaml  supply_chain_demo.yaml  world_state.yaml  world_state_balanced.yaml
editor/: AGENTS.md  GLOSSARY.md  README.md
editor/backend/: cache.py  diff.py  git_status.py  main.py  serialize.py
editor/design_reference/: README.md  chat_transcript.md  mockup_readme.md  wireframe.html
editor/frontend/: index.html  package-lock.json  package.json  vite.config.ts
editor/parity_reviews/: 01_structure_variant_a.md  02_context_panel.md  03_diff_gutters.md  04_cascade.md  05_rf_structure.md
mcp_server/: __init__.py  core.py  server.py
ontology_service/: __init__.py  orientation.py  paths.py  service.py  views.py
reference/: editor_phase_progress.md  ontology_editor_design_brief.md  orchestrator_repo_bootstrap.md  pcg.yaml  resume_note_5-10-26.md
tests/: conftest.py  test_bodies.py  test_diff.py  test_diff_gitref.py  test_editor.py  test_editor_serialize.py  test_integration.py  test_loader.py  test_ontology_service.py  test_phase_b_dod.py  test_query_api.py  test_role_view_render.py  test_scaffolding.py  test_world_state.py  test_world_state_balanced.py
tests/snapshots/: demand_planning.agent_prompt.txt  demand_planning.markdown.md  supply_planning.agent_prompt.txt  supply_planning.markdown.md
(+62 files in other folders)
